--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -17,11 +17,17 @@ path = "contracts/traits/sip-010-ft-trait.clar"
 [contracts.stoken-trait]
 path = "contracts/traits/stoken-trait.clar"
 
+[contracts.stoken-registry-trait]
+path = "contracts/traits/stoken-registry-trait.clar"
+
 [contracts.scoin-trait]
 path = "contracts/traits/scoin-trait.clar"
 
 [contracts.stoken]
 path = "contracts/stoken.clar"
+
+[contracts.stoken-registry]
+path = "contracts/stoken-registry.clar"
 
 [contracts.token]
 path = "contracts/token.clar"
