chore: add ignore and clarigen command

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node": ">=10"
   },
   "scripts": {
+    "generate:type": "clarigen",
     "start": "tsdx watch",
     "build": "tsdx build",
     "test": "tsdx test",
