--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -50,6 +50,10 @@ depends_on = []
 path = "contracts/controller-1.clar"
 depends_on = ["controller-trait", "stoken-trait", "sip-010-ft-trait","stoken-registry"]
 
+[contracts.xbtc]
+path = "contracts/xbtc.clar"
+depends_on = ["sip-010-ft-trait"]
+
 [repl]
 costs_version = 2
 parser_version = 2
