--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -28,7 +28,7 @@ depends_on = ["sip-010-ft-trait"]
 
 [contracts.stoken-registry-trait]
 path = "contracts/traits/stoken-registry-trait.clar"
-depends_on = ["controller-trait","interest-rate-trait"]
+depends_on = ["controller-trait", "interest-rate-trait"]
 
 [contracts.scoin-trait]
 path = "contracts/traits/scoin-trait.clar"
@@ -40,7 +40,7 @@ depends_on = ["sip-010-ft-trait"]
 
 [contracts.stoken-registry]
 path = "contracts/stoken-registry.clar"
-depends_on = ["stoken-registry-trait","stoken","scoin-trait"]
+depends_on = ["stoken-registry-trait", "stoken", "scoin-trait"]
 
 [contracts.token]
 path = "contracts/token.clar"
@@ -48,7 +48,7 @@ depends_on = []
 
 [contracts.controller-1]
 path = "contracts/controller-1.clar"
-depends_on = ["controller-trait", "stoken-trait", "sip-010-ft-trait","stoken-registry"]
+depends_on = ["controller-trait", "stoken-trait", "sip-010-ft-trait", "stoken-registry"]
 
 [contracts.interest-rate]
 path = "contracts/interest-rate.clar"
@@ -64,7 +64,7 @@ depends_on = ["sip-010-ft-trait"]
 
 [contracts.sxbtc-registry]
 path = "contracts/sxbtc-registry.clar"
-depends_on = ["stoken-registry-trait","sxbtc","scoin-trait","xbtc"]
+depends_on = ["stoken-registry-trait", "sxbtc", "scoin-trait", "xbtc", "interest-rate"]
 
 
 [repl]
